Trying to fix height of game area on mobile so that How to Play just peeks from the bottom 2

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
 	margin-inline: auto;
 	/* padding-block: 0.5rem; */
 	display: grid;
-	grid-template-rows: min-content max(1fr, 100vmin) min-content;
+	grid-template-rows: min-content max(1fr, 200vmin) min-content;
 }
 
 #header {
@@ -121,7 +121,7 @@ h1 {
 	justify-content: center;
 
 	/* background-color: hsl(10, 59%, 31%); */
-	background-color: orange;
+	background-color: magenta;
 	border: 4px solid;
 	border-left-color: hsl(10, 59%, 44%);
 	border-top-color: hsl(10, 59%, 44%);
